# ChangeLog for net-libs/libtorrent
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.153 2010/08/18 04:39:47 jer Exp $

  18 Aug 2010; Jeroen Roovers <jer@gentoo.org> libtorrent-0.12.6.ebuild:
  Stable for HPPA (bug #311143).

  04 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  libtorrent-0.12.6.ebuild:
  ppc64 stable wrt #311143

  04 May 2010; <angelos@gentoo.org> libtorrent-0.12.6.ebuild:
  amd64 stable, thanks to Roeland Douma (bug #311143)

  18 Apr 2010; <nixnut@gentoo.org> libtorrent-0.12.6.ebuild:
  ppc stable #311143

  03 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  libtorrent-0.12.6.ebuild:
  x86 stable wrt bug #311143

  28 Dec 2009; Raúl Porcel <armin76@gentoo.org> libtorrent-0.12.5.ebuild,
  libtorrent-0.12.6.ebuild:
  Add ~arm

*libtorrent-0.12.6 (22 Dec 2009)

  22 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libtorrent-0.12.6.ebuild, +files/libtorrent-0.12.6-gcc44.patch:
  Version bump.

  09 Dec 2009; nixnut <nixnut@gentoo.org> libtorrent-0.12.5.ebuild:
  ppc stable #291036

  08 Dec 2009; Jeroen Roovers <jer@gentoo.org> libtorrent-0.12.5.ebuild:
  Stable for HPPA (bug #291036).

  23 Nov 2009; Markus Meier <maekke@gentoo.org> libtorrent-0.12.5.ebuild:
  x86 stable, bug #291036

  18 Nov 2009; Brent Baude <ranger@gentoo.org> libtorrent-0.12.5.ebuild:
  Marking libtorrent-0.12.5 ppc64 for bug 291036

  16 Nov 2009; Dawid Węgliński <cla@gentoo.org> libtorrent-0.12.5.ebuild:
  Stable on amd64 (bug #291036)

  25 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove drizzt from metadata.xml (#149111)

*libtorrent-0.12.5 (10 Sep 2009)

  10 Sep 2009; Patrick Lauer <patrick@gentoo.org> +libtorrent-0.12.5.ebuild:
  Bump to 0.12.5, fixes half of #278660. Thanks to Shark for testing.

  05 Jun 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Retiring, bug 220219.
