@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX libtorrent-0.12.6-gcc44.patch 536 RMD160 0dfa71e21cbc407d1bd0e2c1804873616f3f9f7b SHA1 fc7ed2fb4bf6420bd483cb1b62f22760f7630509 SHA256 c8fb8857bc57f6d6a9ff62d77c1e267fff3a8d905f0c7e0f930127dd64723725
 DIST libtorrent-0.12.5.tar.gz 587228 RMD160 645ae77a23c77c1d2134431b182cb206ab254259 SHA1 05a60581c6b1a94e2a07d1a07e47b8c60d2e237c SHA256 e963f70cfd395520176c163e665e2284b98614701e716e76585c4faa54629dc1
 DIST libtorrent-0.12.6.tar.gz 594113 RMD160 62f0c9737d4ca9621c42d673ea997f9d36875530 SHA1 bf7082f98bd6281493cba94a456697fb88c2c21b SHA256 7b02f33164966a05261e83bad76eef537198fefe76eaf57dfd64bb27c7d77129
 EBUILD libtorrent-0.12.5.ebuild 1210 RMD160 bf0ebf7a4108206436657c4d303c1c9cad690377 SHA1 d3ebae9622f81edbc824aac58da6604741646f6a SHA256 5fa3a9aba82cfcc0f9bb20cd1ffb6b079e82a1334835bec4f03622b033eab928
-EBUILD libtorrent-0.12.6.ebuild 993 RMD160 60e2729826ce70f20b6f5922dd2a60baed0fa192 SHA1 cf1696f3ef6e68b6169525a5e928a69539f09994 SHA256 356dee191c3cda08b6274962ca31415bcbff495186dab2b79131953c17997f2c
-MISC ChangeLog 22938 RMD160 ff36367f97cc15b046bb6b868c7dc3f2b254264c SHA1 3270499848409f2277ed32f65d85bc2e64d11bba SHA256 96172579161bf68f70a02fdacda663b64ac23b02229ab18df6f7bf5486f2b692
+EBUILD libtorrent-0.12.6.ebuild 1335 RMD160 faf34138c62b1ae591f95b743e210b2184ea0c66 SHA1 1d181d2ca7ae7aa7acdf377ff2c98a3b8368a019 SHA256 4bf43e5bbae4b2e03de0ad4cd0cfbc8d7c969cd7c4e19d44a46f443d3615bf1d
+MISC ChangeLog 23073 RMD160 da230302c6323baa033c65bf37ffdec824faf4a9 SHA1 65f9528153297d474d545d7d3571634ffc4379bd SHA256 86add3e231b3a1e127200c531eef50a6402b28862ac520dda8055ea274a26679
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iF4EAREIAAYFAkz+8l0ACgkQTwhj9JtAlp67sAEAkf4tbgpeBI5eCPeVH6Tbb155
++iFpj17jtFz/PYuGw0oA/2frN5CMXibZshC1Fj84UoJKNWkVMF3Mpj0BhnQQ8Vs/
+=olVS
+-----END PGP SIGNATURE-----
