@@ -1,11 +1,11 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/libtorrent-0.12.6.ebuild,v 1.7 2010/08/18 04:39:47 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/libtorrent-0.12.6.ebuild,v 1.8 2010/12/08 02:50:00 vapier Exp $
 
 EAPI=2
-inherit eutils libtool
+inherit eutils libtool toolchain-funcs
 
-DESCRIPTION="LibTorrent is a BitTorrent library written in C++ for *nix."
+DESCRIPTION="BitTorrent library written in C++ for *nix"
 HOMEPAGE="http://libtorrent.rakshasa.no/"
 SRC_URI="http://libtorrent.rakshasa.no/downloads/${P}.tar.gz"
 
@@ -25,13 +25,23 @@ src_prepare() {
 }
 
 src_configure() {
+	# the configure check for posix_fallocate is wrong.
+	# reported upstream as Ticket 2416.
+	local myconf
+	echo "int main(){return posix_fallocate();}" > "${T}"/posix_fallocate.c
+	if $(tc-getCC) ${CFLAGS} ${LDFLAGS} "${T}"/posix_fallocate.c -o /dev/null 2>/dev/null ; then
+		myconf="--with-posix-fallocate"
+	else
+		myconf="--without-posix-fallocate"
+	fi
+
 	econf \
 		--disable-dependency-tracking \
 		--enable-aligned \
 		$(use_enable debug) \
 		$(use_enable ipv6) \
 		$(use_enable ssl openssl) \
-		--with-posix-fallocate
+		${myconf}
 }
 
 src_install() {
